Refresh website copy for better ICP conversion - outcome-first messaging, security differentiation, and ICP relevance for 50-1000 person professional service organizations

--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -7,21 +7,21 @@
   "nav.getStarted": "Aloita",
 
   "hero.tagline": "Tekoälyavusteinen viestintäassistentti asiantuntijatiimeille",
-  "hero.headline": "Tehosta sisäistä viestintää 50–1000 hengen asiantuntijapalveluorganisaatioissa",
-  "hero.description": "Lyyli auttaa viestintä- ja HR-johtajia, -päälliköitä ja johtoryhmiä tehostamaan viestintäprosesseja Slackissa, Teamsissa, sähköpostissa ja muissa viestintätyökaluissa ja kanavissa. Vähennä tietotulvaa säilyttäen yritystason turvallisuus ja compliance.",
-  "hero.ctaPrimary": "Varaa demo",
+  "hero.headline": "Leikkaa sisäisen viestinnän kohinaa ja nopeuta päätöksiä 50–1000 hengen organisaatioissa",
+  "hero.description": "Lyyli virtaviivaistaa Slackia, Teamsia ja sähköpostia tekoälyreitityksellä ja selkeällä omistajuudella. Vähennä ylikuormitusta täyttäen yritystason turvallisuus ja compliance.",
+  "hero.ctaPrimary": "Varaa demo – 30 minuuttia",
   "hero.ctaSecondary": "Lue lisää",
   "hero.trustBadge": "Konsultointi-, teknologia- ja asiantuntijaorganisaatioille",
 
   "problems.title": "Viestintähaasteet, jotka hidastavat organisaatiotasi",
   "problems.missedCommunications.title": "Kriittiset viestit katoavat",
-  "problems.missedCommunications.description": "Tärkeät päivitykset hautautuvat sähköpostiketjuihin ja hajautuvat useisiin kanaviin, mikä johtaa myöhästyneisiin määräaikoihin ja hämmentyneisiin tiimeihin.",
+  "problems.missedCommunications.description": "Tärkeät päivitykset hautautuvat sähköpostiketjuihin ja hajautuvat useisiin kanaviin, mikä johtaa myöhästyneisiin määräaikoihin ja hitaampaan päätöksentekoon.",
   "problems.channelOverload.title": "Kanavien ylikuormituskaaos",
   "problems.channelOverload.description": "Tiimit hukkuvat Slack-ilmoituksiin, sähköpostiketjuihin ja kokousmuistioihin ilman selkeää priorisointia tai keskitettyä koordinaatiota.",
   "problems.accountability.title": "Viestinnän vastuullisuus puuttuu",
-  "problems.accountability.description": "Ei näkyvyyttä siihen, kuka sai mitäkin tietoa, milloin he näkivät sen tai mitä toimenpiteitä tehtiin - luoden compliance- ja suorituskykyaukkoja.",
+  "problems.accountability.description": "Ei näkyvyyttä siihen, kuka sai mitäkin tietoa, milloin he näkivät sen tai mitä toimenpiteitä tehtiin - luoden compliance-riskejä ja vastuullisuusaukkoja.",
   "problems.regulatory.title": "Sääntelypaineet kiristyvät",
-  "problems.regulatory.description": "Kasvavat sääntelyvaatimukset dokumentoinnille, auditointijäljille ja monikieliselle compliance-työlle lisäävät painetta viestintäprosesseille.",
+  "problems.regulatory.description": "Kasvavat sääntelyvaatimukset dokumentoinnille, auditointijäljille ja monikieliselle compliance-työlle lisäävät painetta viestintäprosesseille ja hidastavat kilpailukykyä.",
 
   "features.title": "Yritysviestintäratkaisut, jotka skaalautuvat",
   "features.speed.title": "Salamannopea viestien toimitus",
@@ -107,7 +107,7 @@
   "features.hero.subtitle": "Tehosta viestintäprosesseja tekoälypohjaisella automaatiolla, yritystason turvallisuudella ja saumattomilla integraatioilla.",
 
   "features.automatic.title": "Automaattinen sisällönluonti",
-  "features.automatic.description": "Tekoälypohjainen sisällöntuotanto Slack-kanaville, Teams-viesteille ja sähköpostiviestinnälle. Ylläpidä johdonmukaista sävyä ja viestintää kaikilla alustoilla.",
+  "features.automatic.description": "Tekoälypohjainen sisällöntuotanto Slack-kanaville, Teams-viesteille ja sähköpostiviestinnälle. Ylläpidä johdonmukaista sävyä ja viestintää kaikilla alustoilla niin tiimit viestivät nopeammin ja tehokkaammin.",
   "features.automatic.slack.title": "Älykkäät Slack-viestit",
   "features.automatic.slack.description": "Luo kontekstiin sopivia Slack-viestejä oikealla muotoilulla, maininnoilla ja kanavakohtaisella sävyllä.",
   "features.automatic.teams.title": "Teams-integraatio",
@@ -116,7 +116,7 @@
   "features.automatic.email.description": "Laadi ammattimaisia sähköposteja oikeilla aiheotsikoilla, muotoilulla ja seurantasekvensseillä.",
 
   "features.governance.title": "Hallinto ja compliance",
-  "features.governance.description": "Täydelliset auditointijäljet, versiohistoria ja roolipohjaiset käyttöoikeudet sääntelyvaatimusten ja sisäisten käytäntöjen täyttämiseksi.",
+  "features.governance.description": "Täytä EU/GDPR-vaatimukset täydellisillä auditointijäljillä, versiohistorialla ja roolipohjaisilla käyttöoikeuksilla niin compliance-työ muuttuu vaivattomaksi.",
   "features.governance.audit.title": "Täydelliset auditointijäljet",
   "features.governance.audit.description": "Seuraa jokaista viestiä, muokkausta ja hyväksyntää aikaleimallisilla lokeilla compliance-työtä ja vastuullisuutta varten.",
   "features.governance.version.title": "Versiohistoria",
@@ -125,7 +125,7 @@
   "features.governance.access.description": "Yksityiskohtainen käyttöoikeusjärjestelmä varmistaa, että vain valtuutettu henkilöstö voi käyttää, muokata tai hyväksyä viestintää.",
 
   "features.security.title": "Yritysturvallisuus",
-  "features.security.description": "Pankkitasoinen salaus, ISO-sertifioinnit ja kattavat turvatoimet organisaatiosi viestinnän suojaamiseksi.",
+  "features.security.description": "Pankkitasoinen salaus, ISO-sertifioinnit ja kattavat turvatoimet organisaatiosi viestinnän suojaamiseksi niin voit keskittyä liiketoimintaan ilman tietoturvahuolia.",
   "features.security.encryption.title": "Päästä päähän -salaus",
   "features.security.encryption.description": "Kaikki viestintä salattu siirrossa ja levossa käyttäen AES-256-salaustandardeja.",
   "features.security.iso.title": "ISO 27001 -sertifioitu",
@@ -174,19 +174,19 @@
   "pricing.custom": "Räätälöity",
 
   "pricing.free.name": "Ilmainen",
-  "pricing.free.description": "Täydellinen kokeilukäyttöön, yksinyrittäjille ja pienille yhdistyksille.",
+  "pricing.free.description": "Täydellinen kokeilukäyttöön, yksinyrittäjille ja pienille yhdistyksille AI-viestinnän tutkimiseen.",
   "pricing.free.cta": "Aloita ilmaiseksi",
   "pricing.starter.name": "Starter",
-  "pricing.starter.description": "Ihanteellinen pienille toimijoille ja yksittäisille ammattilaisille.",
+  "pricing.starter.description": "Ihanteellinen pienille toimijoille ja yksittäisille ammattilaisille valmiina virtaviivaistamaan viestintätyönkulkujaan.",
   "pricing.starter.cta": "Aloita ilmainen kokeilu",
   "pricing.growth.name": "Growth",
-  "pricing.growth.description": "Kaikki mitä tarvitset kasvavalle tiimille ja laajenevan yrityksen.",
+  "pricing.growth.description": "Kaikki mitä tarvitset kasvavalle tiimille viestinnän ja hallinnon standardoimiseksi osastojen välillä.",
   "pricing.growth.cta": "Aloita kasvu",
   "pricing.professional.name": "Professional",
-  "pricing.professional.description": "Täydellinen ratkaisu koko organisaation käyttöön.",
+  "pricing.professional.description": "Täydellinen ratkaisu koko organisaation käyttöön edistyneillä tietoturva- ja compliance-ominaisuuksilla.",
   "pricing.professional.cta": "Siirry professional-tasoon",
   "pricing.enterprise.name": "Enterprise",
-  "pricing.enterprise.description": "Räätälöidyt ratkaisut suuryrityksille ja erikoisvaatimuksille.",
+  "pricing.enterprise.description": "Räätälöidyt ratkaisut suuryrityksille erikoisvaatimuksilla ja omistetulla tuella.",
   "pricing.enterprise.cta": "Ota yhteyttä myyntiin",
   "pricing.features.feature": "Ominaisuus",
   "pricing.features.included": "Sisältyy",
@@ -262,7 +262,7 @@
   "pricing.faq.title": "Usein kysytyt kysymykset",
   "pricing.faq.subtitle": "Saa vastaukset yleisimpiin kysymyksiin hinnoittelusta ja suunnitelmista",
   "pricing.roi.title": "Laske ROI:si",
-  "pricing.roi.subtitle": "Katso kuinka paljon voit säästää tekoälyavusteisessa viestinnässä",
+  "pricing.roi.subtitle": "Katso kuinka paljon voit säästää tekoälyavusteisessa viestinnässä. Kvantifioi säästöt minuuteissa.",
   "pricing.roi.teamSize": "Tiimin koko",
   "pricing.roi.people": "henkilöä",
   "pricing.roi.commVolume": "Viestintämäärä",
@@ -275,7 +275,7 @@
   "waitlist.page.title": "Liity odotuslistalle - Lyyli.ai",
   "waitlist.page.description": "Liity odotuslistalle ja ole ensimmäisten joukossa kokeilemassa Lyylin tekoälyavusteista viestintäalustaa asiantuntijaorganisaatioille.",
   "waitlist.hero.title": "Liity odotuslistalle",
-  "waitlist.hero.subtitle": "Ole ensimmäisten joukossa kokeilemassa, miten tekoäly voi muuttaa sisäisen viestinnän asiantuntijaorganisaatioissa",
+  "waitlist.hero.subtitle": "Ole ensimmäisten joukossa kokeilemassa, miten tekoäly voi muuttaa sisäisen viestinnän asiantuntijaorganisaatioissa aikaisella pääsyllä ja eksklusiivisilla päivityksillä.",
   "waitlist.benefits.speed.title": "Aikainen pääsy",
   "waitlist.benefits.speed.description": "Saa etuoikeutettu pääsy kun lanssaamme",
   "waitlist.benefits.quality.title": "Eksklusiiviset päivitykset",
@@ -288,18 +288,18 @@
   "waitlist.info.timeline.title": "Aikajana",
   "waitlist.info.timeline.description": "Ilmoitamme sinulle heti kun Lyyli on saatavilla organisaatiosi käyttöön, tyypillisesti seuraavien kuukausien aikana.",
   "waitlist.info.updates.title": "Säännölliset päivitykset",
-  "waitlist.info.updates.description": "Saat kuukausittaisia päivityksiä edistymisestämme ja eksklusiivisia näkemyksiä alustan kehitykseen.",
+  "waitlist.info.updates.description": "Saat kuukausittaisia päivityksiä edistymisestämme ja eksklusiivisia näkemyksiä alustan kehitykseen ja tietoturvaominaisuuksista.",
 
   "pricing.benefits.title": "Mitattava liiketoimintavaikutus",
   "pricing.benefits.efficiency.title": "Viestinnän tehokkuus",
   "pricing.benefits.efficiency.value": "80% nopeampi",
-  "pricing.benefits.efficiency.description": "Keskimääräinen ajan säästö rutiiniviestintätehtävissä",
+  "pricing.benefits.efficiency.description": "Keskimääräinen ajan säästö rutiiniviestintätehtävissä niin tiimisi keskittyy korkeamman arvon työhön.",
   "pricing.benefits.cost.title": "Kustannussäästöt",
   "pricing.benefits.cost.value": "2 400€/kk",
-  "pricing.benefits.cost.description": "Tyypilliset säästöt 50 hengen tiimille vähentyneen viestintäkuorman kautta",
+  "pricing.benefits.cost.description": "Tyypilliset säästöt 50 hengen tiimille vähentyneen viestintäkuorman ja nopeamman päätöksenteon kautta.",
   "pricing.benefits.roi.title": "Sijoitetun pääoman tuotto",
   "pricing.benefits.roi.value": "340%",
-  "pricing.benefits.roi.description": "Keskimääräinen ROI 12 kuukaudessa tehokkuushyötyjen ja kustannussäästöjen perusteella",
+  "pricing.benefits.roi.description": "Keskimääräinen ROI 12 kuukaudessa tehokkuushyötyjen ja kustannussäästöjen perusteella yritystason tietoturva sisällytettynä.",
 
   "pricing.assumptions.title": "ROI-laskelman oletukset",
   "pricing.assumptions.efficiency": "80% tehokkuuden parannus rutiiniviestinnän automatisoinnista",
@@ -333,11 +333,11 @@
   "about.origin.title": "Miksi Lyyli on olemassa",
   "about.origin.subtitle": "Syntynyt todellisista kipupisteistä asiantuntijaorganisaatioissa",
   "about.origin.problem1.title": "Menetetyt kriittiset viestit",
-  "about.origin.problem1.description": "Tärkeät päivitykset hautautuivat ylikuormitettuihin Slack-kanaviin, johtaen projektiviiveisiin ja menetettyihin määräaikoihin.",
+  "about.origin.problem1.description": "Tärkeät päivitykset hautautuivat ylikuormitettuihin Slack-kanaviin, johtaen projektiviiveisiin ja menetettyihin määräaikoihin, mikä vaikuttaa asiakastyytyväisyyteen.",
   "about.origin.problem2.title": "Auditoitavuuden puute",
-  "about.origin.problem2.description": "Ei selvää jälkeä siitä, kuka hyväksyi mitä, milloin päätökset tehtiin tai miksi muutoksia tapahtui.",
+  "about.origin.problem2.description": "Ei selvää jälkeä siitä, kuka hyväksyi mitä, milloin päätökset tehtiin tai miksi muutoksia tapahtui, luoden compliance-riskejä ja vastuullisuusaukkoja.",
   "about.origin.problem3.title": "Monikieliset esteet",
-  "about.origin.problem3.description": "Globaalit asiantuntijaorganisaatiot kamppailevat kielimuurien kanssa, jotka hidastavat yhteistyötä ja päätöksentekoa.",
+  "about.origin.problem3.description": "Globaalit asiantuntijaorganisaatiot kamppailevat kielimuurien kanssa, jotka hidastavat yhteistyötä ja päätöksentekoa, vähentäen kilpailukykyä.",
   "about.origin.solution": "Lyyli rakennettiin erityisesti ratkaisemaan nämä haasteet 50-1000 hengen asiantuntijaorganisaatioille.",
 
   "about.mission.title": "Missiomme",
@@ -383,9 +383,9 @@
   "about.cta.trial": "Aloita maksuton kokeilu",
 
   "blog.page.title": "Blogi - Lyyli.ai",
-  "blog.page.description": "Näkemyksiä tekoälyviestinnästä, sisäisestä koordinaatiosta ja yritystason turvallisuudesta asiantuntijapalveluorganisaatioille.",
+  "blog.page.description": "Käytännön ohjeita AI-viestinnästä, koordinaatiosta ja turvallisista operaatioista asiantuntijaorganisaatioille.",
   "blog.hero.title": "Näkemyksiä asiantuntijatiimeille",
-  "blog.hero.subtitle": "Uusimmat ajatukset tekoälyviestinnästä, sisäisestä koordinaatiosta ja yritystason turvallisuudesta.",
+  "blog.hero.subtitle": "Käytännön ohjeita AI-viestinnästä, koordinaatiosta ja turvallisista operaatioista toiminnan- ja viestintäjohtajille.",
   "blog.post.readMore": "Lue lisää",
   "blog.post.readTime": "min lukuaika",
   "blog.post.publishedOn": "Julkaistu",
@@ -402,10 +402,10 @@
   "contact.page.description": "Ota yhteyttä Lyylin tiimiin. Turvalliset viestintäkanavat toiminnanjohtajille ja viestintäpäälliköille.",
 
   "contact.hero.title": "Valmis muuttamaan organisaatiosi viestintää?",
-  "contact.hero.subtitle": "Varaa kartoituskeskustelu tiimimme kanssa oppiaksesi, miten Lyyli voi virtaviivaistaa asiantuntijaorganisaatiosi sisäistä koordinaatiota.",
+  "contact.hero.subtitle": "Varaa 30 minuutin kartoituskeskustelu oppiaksesi, miten Lyyli voi virtaviivaistaa asiantuntijaorganisaatiosi sisäistä koordinaatiota ja tarkistaa tyypilliset tulokset.",
 
   "contact.form.title": "Varaa kartoituskeskustelu",
-  "contact.form.subtitle": "Toiminnanjohtajat ja viestintäpäälliköt: Keskustellaan organisaatiosi erityisistä viestintähaasteista.",
+  "contact.form.subtitle": "Toiminnanjohtajat ja viestintäpäälliköt: Mukautamme lyhyen esittelyn työkaluihisi (Slack/Teams/sähköposti) ja keskustelemme organisaatiosi erityisistä viestintähaasteista.",
   "contact.form.name.label": "Koko nimi",
   "contact.form.name.placeholder": "Koko nimesi",
   "contact.form.email.label": "Yrityssähköposti",
@@ -451,8 +451,8 @@
 
   "contact.response.title": "Mitä odottaa",
   "contact.response.timing": "Vastaus 24 tunnin sisällä",
-  "contact.response.discovery": "30 minuutin kartoituskeskustelu sovittuna sinulle sopivaan aikaan",
-  "contact.response.followup": "Räätälöity ehdotus organisaatiosi tarpeiden perusteella",
+  "contact.response.discovery": "30 minuutin kartoituskeskustelu sinulle sopivaan aikaan — agenda: tavoitteet, pullonkaulat, seuraavat askeleet.",
+  "contact.response.followup": "Räätälöity ehdotus organisaatiosi tarpeiden ja compliance-vaatimusten perusteella.",
 
   "404.title": "Sivua ei löydy - Lyyli.ai",
   "404.heading": "Sivua ei löydy",
@@ -477,7 +477,7 @@
   "cybersecurity.page.keywords": "kyberturvallisuus, tietosuoja, GDPR-vaatimustenmukaisuus, AES-256 salaus, EU-palvelimet, yksityisyys, tietoturva, tietojen eristäminen, pääsynhallinta",
   
   "cybersecurity.hero.title": "Tietoturva ja yksityisyydensuoja Lyylissä",
-  "cybersecurity.hero.subtitle": "Kun rakennamme AI-työkalua viestinnän tueksi, ymmärrämme täysin vastuumme asiakkaidemme tietojen suojaamisessa. Tietoturva ei ole meille pelkkä tekninen vaatimus, vaan liiketoimintamme kulmakivi.",
+  "cybersecurity.hero.subtitle": "EU-palvelimet, AES-256, GDPR-yhteensopiva suunnittelusta lähtien. Kun rakennamme AI-työkalua viestinnän tueksi, ymmärrämme täysin vastuumme asiakkaidemme tietojen suojaamisessa.",
   "cybersecurity.hero.contactButton": "Ota yhteyttä",
   "cybersecurity.hero.featuresButton": "Katso ominaisuudet",
   "cybersecurity.hero.imageAlt": "Kyberturvallisuus- ja tietosuoja-kuvitus, joka näyttää tietoturvatoimet ja yksityisyydensuojan",
@@ -485,7 +485,7 @@
   "cybersecurity.highlights.gdpr.title": "GDPR-yhteensopiva",
   "cybersecurity.highlights.gdpr.description": "Täysi GDPR-yhteensopivuus alusta asti",
   "cybersecurity.highlights.euServers.title": "EU-palvelimet",
-  "cybersecurity.highlights.euServers.description": "Kaikki data pysyy EU:n alueella",
+  "cybersecurity.highlights.euServers.description": "Kaikki data pysyy EU:n alueella — oletuksena.",
   "cybersecurity.highlights.encryption.title": "AES-256 salaus",
   "cybersecurity.highlights.encryption.description": "Korkean tason salaus kaikelle datalle",
   
@@ -496,9 +496,9 @@
   "cybersecurity.securityFeatures.euDataCenters.title": "EU-datacenterit",
   "cybersecurity.securityFeatures.euDataCenters.description": "Palvelimemme sijaitsevat EU:ssa, tietosi eivät poistu unionin alueelta",
   "cybersecurity.securityFeatures.isolatedEnvironment.title": "Eristetty ympäristö",
-  "cybersecurity.securityFeatures.isolatedEnvironment.description": "Yritysdatasi on täysin eristetty eikä sitä käytetä kielimallien kouluttamiseen",
+  "cybersecurity.securityFeatures.isolatedEnvironment.description": "Yritysdatasi on eristetty eikä sitä koskaan käytetä globaalien mallien kouluttamiseen — täydellinen yksityisyys suunnittelusta lähtien.",
   "cybersecurity.securityFeatures.noThirdParties.title": "Ei kolmansia osapuolia",
-  "cybersecurity.securityFeatures.noThirdParties.description": "Tietojasi ei jaeta, myydä tai vuokrata kolmansille osapuolille",
+  "cybersecurity.securityFeatures.noThirdParties.description": "Tietojasi ei jaeta, myydä tai vuokrata kolmansille osapuolille — täysi hallinta pysyy organisaatiollasi.",
   "cybersecurity.securityFeatures.regularAudits.title": "Säännölliset auditoinnit",
   "cybersecurity.securityFeatures.regularAudits.description": "Suoritamme säännöllisiä tietoturva-auditointeja ulkopuolisten asiantuntijoiden kanssa",
   "cybersecurity.securityFeatures.accessManagement.title": "Käyttöoikeuksien hallinta",
